--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "sass": "^1.55.0",
     "stylus": "^0.59.0",
     "vue": "^3.2.41"
