--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "iconfont": "node src/dev/iconfont.js"
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "sass": "^1.55.0",
-    "stylus": "^0.59.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "sass": "^1.55.0",
+    "simple-iconfont-builder": "^1.0.1",
+    "stylus": "^0.59.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.0",
     "vue-tsc": "^1.0.9"
