chore: 修改title，配置打包输出

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "moduleResolution": "Node",
+    "outDir": "./dist",
     "strict": true,
     "jsx": "preserve",
     "resolveJsonModule": true,
